--- a/.gitignore
+++ b/.gitignore
@@ -204,10 +204,10 @@
 **/local.settings.json
 **/local.config.json
 
-**/vid
-**/pics-videos
-**/.mp4
-**/.mkv
-**/.jpg
-**/.png
-**/.jpeg
+**/vid/
+**/pics-videos/
+**/*.mp4
+**/*.mkv
+**/*.jpg
+**/*.png
+**/*.jpeg
